--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
       <section class="profile">
         <div class="profile__avatar"></div>
         <div class="profile__info">
-          <h1 class="profile__title">Жак-Ив Кусто</h1>
+          <div class="profile__title-cover">
+            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <button class="profile__edit-button"></button>
+          </div>
           <p class="profile__subtitle">Исследователь океана</p>
         </div>
-        <button class="profile__edit-button"></button>
         <button class="profile__add-button"></button>
       </section>
       <section class="cards">
