--- a/index.html
+++ b/index.html
@@ -29,15 +29,65 @@
         </div>
         <button class="profile__add-button"></button>
       </section>
-      <section class="cards">
-        <div class="cards__item">
-
+      <section class="elements">
+        <div class="card">
+          <img src="./images/card-karachaevsk.jpg" alt="Карачаевск" class="card__image">
+          <div class="card__title-cover">
+            <h2 class="card__title">Карачаевск</h2>
+            <button class="card__like card__like_active"></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./images/card-elbrus.jpg" alt="Гора Эльбрус" class="card__image">
+          <div class="card__title-cover">
+            <h2 class="card__title">Гора Эльбрус</h2>
+            <button class="card__like"></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./images/card-dombai.jpg" alt="Домбай" class="card__image">
+          <div class="card__title-cover">
+            <h2 class="card__title">Домбай</h2>
+            <button class="card__like"></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./images/card-elbrus.jpg" alt="Гора Эльбрус" class="card__image">
+          <div class="card__title-cover">
+            <h2 class="card__title">Гора Эльбрус</h2>
+            <button class="card__like"></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./images/card-dombai.jpg" alt="Домбай" class="card__image">
+          <div class="card__title-cover">
+            <h2 class="card__title">Домбай</h2>
+            <button class="card__like"></button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="./images/card-karachaevsk.jpg" alt="Карачаево-Черкессия" class="card__image">
+          <div class="card__title-cover">
+            <h2 class="card__title">Карачаево-Черкессия</h2>
+            <button class="card__like"></button>
+          </div>
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <p class="footer__copyright">&copy; 2023 Mesto Russia</p>
+    </footer>
   </div>
-
+  <section class="popup">
+    <form class="popup__container" action="#">
+      <h3 class="popup__title">Редактировать профиль</h3>
+      <input class="popup__name-input" type="text" placeholder="Ваше имя">
+      <input class="popup__job-input" type="text" placeholder="Кем работаете?">
+      <button class="popup__save-btn" type="submit">Сохранить</button>
+      <button class="popup__close-btn" type="button"></button>
+    </form>
+  </section>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
