Исправлено отображение картинок разных размеров

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section class="elements">
         <ul class="cards-list">
           <li class="card">
-            <img src="./images/card-karachaevsk.jpg" alt="Карачаевск" class="card__image">
+            <img src="./images/card-kchr.jpg" alt="Карачаевск" class="card__image">
             <div class="card__title-cover">
               <h2 class="card__title">Карачаевск</h2>
               <button class="card__like card__like_active" type="button"></button>
@@ -67,7 +67,7 @@
             </div>
           </li>
           <li class="card">
-            <img src="./images/card-karachaevsk.jpg" alt="Карачаево-Черкессия" class="card__image">
+            <img src="./images/card-kchr.jpg" alt="Карачаево-Черкессия" class="card__image">
             <div class="card__title-cover">
               <h2 class="card__title">Карачаево-Черкессия</h2>
               <button class="card__like" type="button"></button>
