--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Рулла Денис">
-  <meta name="description" content="Проектная работа №5 студента Рулла Дениса. Курс Веб-разработчик. Когорта 63">
+  <meta name="description" content="Проектная работа №6 студента Рулла Дениса. Курс Веб-разработчик. Когорта 63">
   <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./pages/index.css">
+  <script src="./js/initialcards.js" defer></script>
+  <script src="./js/index.js" defer></script>
+  <script src="./js/validate.js" defer></script>
   <title>Mesto</title>
 </head>
 
@@ -42,10 +45,14 @@
     <div class="popup__container">
       <button class="popup__close-btn" type="button"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form popup__form_type_edit" name="popup-edit-form" action="#">
-        <input class="popup__input popup__input_type_name" name="name-input" type="text" placeholder="Ваше имя">
-        <input class="popup__input popup__input_type_job" name="job-input" type="text" placeholder="Кем работаете?">
-        <button class="popup__submit-btn" type="submit">Сохранить</button>
+      <form class="popup__form popup__form_type_edit" name="popup-edit-form" action="#" novalidate>
+        <input class="popup__input popup__input_type_name" name="name-input" type="text" placeholder="Ваше имя" required
+          minlength="2" maxlength="40">
+        <span class="popup__error name-input-error"></span>
+        <input class="popup__input popup__input_type_job" name="job-input" type="text" placeholder="Кем работаете?"
+          required minlength="2" maxlength="200">
+        <span class="popup__error job-input-error"></span>
+        <button class="popup__submit-btn" disabled type="submit">Сохранить</button>
       </form>
     </div>
   </section>
@@ -53,12 +60,14 @@
     <div class="popup__container">
       <button class="popup__close-btn" type="button"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form popup__form_type_add" name="popup-card-add-form" action="#">
+      <form class="popup__form popup__form_type_add" name="popup-card-add-form" action="#" novalidate>
         <input class="popup__input popup__input_type_card-title" name="card-title-input" type="text"
-          placeholder="Название">
-        <input class="popup__input popup__input_type_card-img-link" name="card-img-link-input" type="text"
-          placeholder="Ссылка на картинку">
-        <button class="popup__submit-btn" type="submit">Создать</button>
+          placeholder="Название" required minlength="2" maxlength="30">
+        <span class="popup__error card-title-input-error"></span>
+        <input class="popup__input popup__input_type_card-img-link" name="card-img-link-input" type="url"
+          placeholder="Ссылка на картинку" required>
+        <span class="popup__error card-img-link-input-error"></span>
+        <button class="popup__submit-btn" disabled type="submit">Создать</button>
       </form>
     </div>
   </section>
@@ -83,8 +92,6 @@
       </div>
     </li>
   </template>
-
-  <script src="./js/index.js"></script>
 </body>
 
 </html>
