пр8 - написаны классы, не готов index.js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Проектная работа №7 студента Рулла Дениса. Курс Веб-разработчик. Когорта 63">
   <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./pages/index.css">
-  <script src="./js/index.js" type="module"></script>
+  <script src="./pages/index.js" type="module"></script>
   <title>Mesto</title>
 </head>
 
