--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,15 @@
     <main class="content">
       <section class="profile">
         <div class="profile__avatar">
-          <img class="profile__avatar-image" src="<%=require('./images/avatar.jpg')%>" alt="Аватар">
+          <img class="profile__avatar-image" src="<%=require('./images/loading.png')%>" alt="Аватар">
           <button class="profile__avatar-edit-btn" type="button"></button>
         </div>
         <div class="profile__info">
           <div class="profile__title-cover">
-            <h1 class="profile__title">Жак-Ив Кусто</h1>
+            <h1 class="profile__title"></h1>
             <button class="profile__edit-button" type="button"></button>
           </div>
-          <p class="profile__subtitle">Исследователь океана</p>
+          <p class="profile__subtitle"></p>
         </div>
         <button class="profile__add-button" type="button"></button>
       </section>
@@ -60,9 +60,9 @@
       <button class="popup__close-btn" type="button"></button>
       <h3 class="popup__title">Новое место</h3>
       <form class="popup__form popup__form_type_add" name="popup-card-add-form" action="#" novalidate>
-        <input class="popup__input popup__input_type_card-title" name="title" type="text" placeholder="Название"
-          required minlength="2" maxlength="30">
-        <span class="popup__error title-error"></span>
+        <input class="popup__input popup__input_type_card-title" name="name" type="text" placeholder="Название" required
+          minlength="2" maxlength="30">
+        <span class="popup__error name-error"></span>
         <input class="popup__input popup__input_type_card-img-link" name="link" type="url"
           placeholder="Ссылка на картинку" required>
         <span class="popup__error link-error"></span>
@@ -84,9 +84,9 @@
       <button class="popup__close-btn" type="button"></button>
       <h3 class="popup__title">Обновить аватар</h3>
       <form class="popup__form popup__form_type_avatar" name="popup-avatar-form" action="#" novalidate>
-        <input class="popup__input popup__input_type_avatar-link" name="avatar-link-input" type="url"
-          placeholder="Ссылка на картинку" required minlength="2" maxlength="30">
-        <span class="popup__error avatar-link-input-error"></span>
+        <input class="popup__input popup__input_type_avatar-link" name="avatarLink" type="url"
+          placeholder="Ссылка на картинку" required>
+        <span class="popup__error avatarLink-error"></span>
         <button class="popup__submit-btn" disabled type="submit">Сохранить</button>
       </form>
     </div>
@@ -107,7 +107,7 @@
         <h2 class="card__title"></h2>
         <div class="card__likes-cover">
           <button class="card__like" type="button"></button>
-          <p class="card__likes-counter">2</p>
+          <p class="card__likes-counter"></p>
         </div>
       </div>
     </li>
